style/main.css
* {
    margin: 0;
    padding: 0;
    border: 0;
    box-sizing: border-box;
    /* border: 1px solid lightgray; */
}

header {
    width: 100%;
    background-color: lightyellow;
}

.logo {
    margin-left: 50px;
    margin-top: 12px;
    /*    margin-bottom: 15px;*/
    height: 65px;
    position: absolute;
}

.headlines {
    padding-top: 6px;
    /*    width: 56%;*/
}

.headline1 {
    margin-left: 330px;
    font-family: 'Martel', serif;
    font-size: 58px;
    font-weight: 700;
    color: darkblue
}

.headline2 {
    margin-left: 18px;
    font-family: 'Paprika', cursive;
    font-size: 50px;
    color: crimson;
}

body {
    background: url(../images/dandylion1.png) no-repeat;
    background-size: cover;
}

.intro {
    margin-top: 40px;
    margin-left: auto;
    margin-right: auto;
    font-size: 17px;
    border: 4px solid #024785;
    border-radius: 7px;
    padding: 12px;
    background-color: cornflowerblue;
    width: 54%;
    font-family: 'Martel', sans-serif;
    color: aliceblue;
    text-align: justify;
}

.wrapper {
    margin-top: 50px;
    text-align: center;
}

#search-form {
    margin-left: auto;
    margin-right: auto;
    font-size: 15px;
    border: 3px solid #024785;
    border-radius: 7px;
    padding: 8px;
    background-color: cornflowerblue;
    width: 26%;
    font-family: 'Martel', sans-serif;
    color: black;
}

.instruction {
    font-size: 15px;
    font-family: 'Martel', sans-serif;
    color: aliceblue;
}

.search {
    font-size: 12px;
    border: 2px solid #024785;
    border-radius: 15px;
    margin-top: 8px;
    background-color: cornflowerblue;
    width: 20%;
    font-family: 'Martel', sans-serif;
    color: black;
}

#county_drop_down {
    display: inline-block;
}

label {
    width: 100px;
    clear: left;
    text-align: right;
    padding-right: 1px;
}

input,
label {
    float: left;
}

.results-wrapper {
    margin-top: 50px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    border: 4px solid #024785;
    border-radius: 7px;
    padding: 12px;
    background-color: cornflowerblue;
    width: 54%;
    font-family: 'Martel', sans-serif;
    color: aliceblue;
}

.results-wrapper li {
    margin-top: 25px;
    border: 4px solid #024785;
    border-radius: 7px;
    padding: 12px;
    background-color: cornflowerblue;
}

ul {
    list-style-type: none;
}

footer p {
    font-family: Bilbo;
    font-size: 20px;
    text-align: center;
    border-top: 1px solid aliceblue;
    padding-top: 15px
}

